force-app/main/default/objects/Opportunity/fields/Account_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Mobile_Number__c</fullName>
    <formula>Account.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mobile Number</label>
    <type>Text</type>
</CustomField>