force-app/main/default/objects/Opportunity/fields/Adhoc_Exception__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adhoc Exception</label>
    <type>Checkbox</type>
</CustomField>