force-app/main/default/objects/Opportunity/fields/AED_to_USD_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>AED_to_USD_Conversion_Rate__c</fullName>
    <defaultValue>0.272851</defaultValue>
    <label>AED to USD Conversion Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>