force-app/main/default/objects/Opportunity/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25-40</fullName>
            </value>
            <value>
                <fullName>40-60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>