force-app/main/default/objects/Opportunity/fields/Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>