force-app/main/default/objects/Opportunity/fields/Arabic_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Opportunity_Name__c</fullName>
    <label>Arabic Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>