force-app/main/default/objects/Opportunity/fields/Attended_By_Sales__c.field-meta.xml
<CustomField>
    <fullName>Attended_By_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attended By Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>