force-app/main/default/objects/Opportunity/fields/Bank_Loan_Stage__c.field-meta.xml
<CustomField>
    <fullName>Bank_Loan_Stage__c</fullName>
    <label>Bank Loan Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Bank_Loan_Self_Funded__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Additional clarity from client</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
            <value>
                <fullName>Document Collection</fullName>
            </value>
            <value>
                <fullName>PD and bank credit review</fullName>
            </value>
            <value>
                <fullName>Sanctioned - Awaiting 1st disbursement</fullName>
            </value>
            <value>
                <fullName>Sanctioned - Developer documentation</fullName>
            </value>
            <value>
                <fullName>Sanctioned - Loan paper execution</fullName>
            </value>
            <value>
                <fullName>Sanction in process</fullName>
            </value>
            <value>
                <fullName>Connect with client &amp; Assign Banker</fullName>
                <default>true</default>
                <label>Connect with client &amp; Assign Banker</label>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Need help to apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>