force-app/main/default/objects/Opportunity/fields/Bank_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>Bank_RM_Email__c</fullName>
    <label>Bank RM Email</label>
    <type>Email</type>
</CustomField>