force-app/main/default/objects/Opportunity/fields/Booking_Channel_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel_Partner_Email__c</fullName>
    <label>Booking Channel Partner Email</label>
    <type>Email</type>
</CustomField>