force-app/main/default/objects/Opportunity/fields/Booking_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Employee_Id__c</fullName>
    <label>Booking Employee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>