force-app/main/default/objects/Opportunity/fields/Booking_in_Source_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Booking_in_Source_Remarks__c</fullName>
    <label>Booking in Source Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>