force-app/main/default/objects/Opportunity/fields/Booking_Mobile_of_Refree__c.field-meta.xml
<CustomField>
    <fullName>Booking_Mobile_of_Refree__c</fullName>
    <label>Booking Mobile of Refree</label>
    <type>Phone</type>
</CustomField>