force-app/main/default/objects/Opportunity/fields/Booking_Name_of_Refree__c.field-meta.xml
<CustomField>
    <fullName>Booking_Name_of_Refree__c</fullName>
    <label>Booking Name of Refree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>