force-app/main/default/objects/Opportunity/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Sobha Connect</fullName>
            </value>
            <value>
                <fullName>Management Reference</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Loyalty Customer</fullName>
            </value>
            <value>
                <fullName>Mall Stands</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
            </value>
            <value>
                <fullName>Loyalty Customer Referral</fullName>
            </value>
            <value>
                <fullName>Salesperson initiative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>