force-app/main/default/objects/Opportunity/fields/Budget_In_Cr__c.field-meta.xml
<CustomField>
    <fullName>Budget_In_Cr__c</fullName>
    <label>Budget (In Cr.)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.7 Mil – 1.5 Mil</fullName>
            </value>
            <value>
                <fullName>1.5 Mil – 3 Mil</fullName>
            </value>
            <value>
                <fullName>3 Mil – 5.5 Mil</fullName>
            </value>
            <value>
                <fullName>5.5 Mil – 8 Mil</fullName>
            </value>
            <value>
                <fullName>8 Mil – 12.5 Mil</fullName>
            </value>
            <value>
                <fullName>12.5 Mil &amp; above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>