force-app/main/default/objects/Opportunity/fields/Budget_Site_Visit_In_Lacs__c.field-meta.xml
<CustomField>
    <fullName>Budget_Site_Visit_In_Lacs__c</fullName>
    <label>Budget Site Visit (In Mn)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>