force-app/main/default/objects/Opportunity/fields/Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Value__c</fullName>
    <description>This field is updated from Apex Controller(ProformaInvoiceController) that is related to Proforma Invoice LWC.
This field is updated based on the selection of either Percentage or Amount in Proforma Invoice SubType Field</description>
    <inlineHelpText>Calculated Value (For Internal Use i.e Y)</inlineHelpText>
    <label>Calculated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>