force-app/main/default/objects/Opportunity/fields/call_proposed_date_of_visit__c.field-meta.xml
<CustomField>
    <fullName>call_proposed_date_of_visit__c</fullName>
    <label>Presales Next Call Proposed DateOfVisit</label>
    <type>DateTime</type>
</CustomField>