force-app/main/default/objects/Opportunity/fields/Call_Rating__c.field-meta.xml
<CustomField>
    <fullName>Call_Rating__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Call Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>