force-app/main/default/objects/Opportunity/fields/CallCenterNumber__c.field-meta.xml
<CustomField>
    <fullName>CallCenterNumber__c</fullName>
    <formula>Project__r.CallCenterNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallCenterNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>