force-app/main/default/objects/Opportunity/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>TextArea</type>
</CustomField>