force-app/main/default/objects/Opportunity/fields/Channel_Partner_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Contact_Person__c</fullName>
    <label>Channel Partner Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>