force-app/main/default/objects/Opportunity/fields/Cheque_DD_UTR_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_UTR_No__c</fullName>
    <label>Cheque/DD/UTR No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>