force-app/main/default/objects/Opportunity/fields/Co_Owner2__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Co-Owner2)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>