force-app/main/default/objects/Opportunity/fields/Co_Owner4__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner4</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Co-Owner4)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>