force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>Amount * 2  / 100</formula>
    <label>Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>