force-app/main/default/objects/Opportunity/fields/Common_Floor_City__c.field-meta.xml
<CustomField>
    <fullName>Common_Floor_City__c</fullName>
    <label>Common Floor City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City 1</fullName>
            </value>
            <value>
                <fullName>City 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>