force-app/main/default/objects/Opportunity/fields/Common_Floor_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Common_Floor_Lead_Type__c</fullName>
    <label>Common Floor Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>