force-app/main/default/objects/Opportunity/fields/Correct_Booking_date_and_consideration_v__c.field-meta.xml
<CustomField>
    <fullName>Correct_Booking_date_and_consideration_v__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correct Booking Date and Consideration v</label>
    <type>Checkbox</type>
</CustomField>