force-app/main/default/objects/Opportunity/fields/Correct_Booking_Source_mentioned__c.field-meta.xml
<CustomField>
    <fullName>Correct_Booking_Source_mentioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correct Booking Source Mentioned</label>
    <type>Checkbox</type>
</CustomField>