force-app/main/default/objects/Opportunity/fields/Cost_sheet_attached_signed_by_applican__c.field-meta.xml
<CustomField>
    <fullName>Cost_sheet_attached_signed_by_applican__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Sheet Attached &amp; Signed by Applican</label>
    <type>Checkbox</type>
</CustomField>