force-app/main/default/objects/Opportunity/fields/CP_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>CP_Mobile_Number__c</fullName>
    <label>Walk_In_CP Mobile</label>
    <type>Phone</type>
</CustomField>