force-app/main/default/objects/Opportunity/fields/CP_Reference_booking_details_mentioned__c.field-meta.xml
<CustomField>
    <fullName>CP_Reference_booking_details_mentioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Source Detail Mention Correctly</label>
    <type>Checkbox</type>
</CustomField>