force-app/main/default/objects/Opportunity/fields/CP_RERA_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_RERA_ID__c</fullName>
    <label>Walk_In_CP RERA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>