force-app/main/default/objects/Opportunity/fields/CP_Sobha_Connect_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_Sobha_Connect_ID__c</fullName>
    <formula>if (
NOT(ISBLANK( Walk_In_CP__c)),Walk_In_CP__r.Channel_Partner_Id__c ,
if
( NOT(ISBLANK ( Walk_In_SC__c)), Walk_In_SC__r.Name ,&quot;&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP / Sobha Connect ID</label>
    <type>Text</type>
</CustomField>