force-app/main/default/objects/Opportunity/fields/Customer_Visited__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visited__c</fullName>
    <label>Customer Visited</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>