force-app/main/default/objects/Opportunity/fields/Date_of_application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Of Application</label>
    <type>Checkbox</type>
</CustomField>