force-app/main/default/objects/Opportunity/fields/Date_of_Assigninng__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Assigninng__c</fullName>
    <label>Date Of Assigninng</label>
    <type>Date</type>
</CustomField>