force-app/main/default/objects/Opportunity/fields/Date_Of_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Site_Visit__c</fullName>
    <label>Date Of Site Visit</label>
    <type>Date</type>
</CustomField>