force-app/main/default/objects/Opportunity/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <formula>CreatedDate +0.0015</formula>
    <label>Delay</label>
    <type>DateTime</type>
</CustomField>