force-app/main/default/objects/Opportunity/fields/Descriptive_Remarks_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Descriptive_Remarks_Feedback__c</fullName>
    <label>Descriptive Remarks / Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>