force-app/main/default/objects/Opportunity/fields/Detailed_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Sub_Source__c</fullName>
    <label>Detailed Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Sub_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non-Customer</fullName>
            </value>
            <value>
                <fullName>Radius Employee Reference</fullName>
            </value>
            <value>
                <fullName>Referred by Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>