force-app/main/default/objects/Opportunity/fields/Dispatch_Mode__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Mode__c</fullName>
    <label>Dispatch Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Soft Copy via Email</fullName>
            </value>
            <value>
                <fullName>Soft copy via email and hardcopy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>