force-app/main/default/objects/Opportunity/fields/Documentation_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Approved_Date__c</fullName>
    <label>Documentation Approved Date</label>
    <type>Date</type>
</CustomField>