force-app/main/default/objects/Opportunity/fields/Duplicate_Project_Unit_Request__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Project_Unit_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Project Unit Request</label>
    <type>Checkbox</type>
</CustomField>