force-app/main/default/objects/Opportunity/fields/Email_Id_O__c.field-meta.xml
<CustomField>
    <fullName>Email_Id_O__c</fullName>
    <label>Email Id(O)</label>
    <type>Email</type>
</CustomField>