force-app/main/default/objects/Opportunity/fields/Facebook_Adset_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Adset_ID__c</fullName>
    <label>Facebook Adset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>