force-app/main/default/objects/Opportunity/fields/First_Call_Attempted_by__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempted_by__c</fullName>
    <label>Presales First Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>