force-app/main/default/objects/Opportunity/fields/First_Letter_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>First_Letter_Sent_On__c</fullName>
    <label>First Letter Sent On</label>
    <type>Date</type>
</CustomField>