force-app/main/default/objects/Opportunity/fields/First_Sal_Next_Call_Proposed_DateOfVisit__c.field-meta.xml
<CustomField>
    <fullName>First_Sal_Next_Call_Proposed_DateOfVisit__c</fullName>
    <label>First Sal Next Call Proposed DateOfVisit</label>
    <type>DateTime</type>
</CustomField>