force-app/main/default/objects/Opportunity/fields/First_Site_Visit_Rating__c.field-meta.xml
<CustomField>
    <fullName>First_Site_Visit_Rating__c</fullName>
    <label>First Site Visit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Yet to Rate</fullName>
            </value>
            <value>
                <fullName>Expression of Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>