force-app/main/default/objects/Opportunity/fields/Flat_number_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Flat_number_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flat Number &amp; Configuration</label>
    <type>Checkbox</type>
</CustomField>