force-app/main/default/objects/Opportunity/fields/Flatcost_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Flatcost_Demanded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flatcost Demanded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>