force-app/main/default/objects/Opportunity/fields/Flatcost_outstanding__c.field-meta.xml
<CustomField>
    <fullName>Flatcost_outstanding__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flatcost Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>