force-app/main/default/objects/Opportunity/fields/Flatcost_Paid_Percent__c.field-meta.xml
<CustomField>
    <fullName>Flatcost_Paid_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flatcost Paid Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>