force-app/main/default/objects/Opportunity/fields/Flatcost_Paid_Percent_Against_AV__c.field-meta.xml
<CustomField>
    <fullName>Flatcost_Paid_Percent_Against_AV__c</fullName>
    <label>Flatcost Paid Percent (Against AV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>