force-app/main/default/objects/Opportunity/fields/FOLLOW_UP_1st__c.field-meta.xml
<CustomField>
    <fullName>FOLLOW_UP_1st__c</fullName>
    <label>FOLLOW UP (1st)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>