force-app/main/default/objects/Opportunity/fields/Form_Reject_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Reject_On_Hold_Date__c</fullName>
    <label>Form Reject/On Hold Date</label>
    <type>Date</type>
</CustomField>