force-app/main/default/objects/Opportunity/fields/Fourth_Letter_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Letter_Sent_On__c</fullName>
    <label>Fourth Letter Sent On</label>
    <type>Date</type>
</CustomField>