force-app/main/default/objects/Opportunity/fields/Future_Correspondence_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Future_Correspondence_Contact_Phone__c</fullName>
    <label>Future_Correspondence_Contact_Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>