force-app/main/default/objects/Opportunity/fields/HH__c.field-meta.xml
<CustomField>
    <fullName>HH__c</fullName>
    <label>HH</label>
    <length>25</length>
    <type>Text</type>
</CustomField>