force-app/main/default/objects/Opportunity/fields/I_I_A_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_I_A_Comments__c</fullName>
    <label>I &amp; I A Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>