force-app/main/default/objects/Opportunity/fields/INITIAL_INFO_From_TSA__c.field-meta.xml
<CustomField>
    <fullName>INITIAL_INFO_From_TSA__c</fullName>
    <label>INITIAL INFO (From TSA)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>