force-app/main/default/objects/Opportunity/fields/Input_Value__c.field-meta.xml
<CustomField>
    <fullName>Input_Value__c</fullName>
    <description>This field is updated from Apex Controller(ProformaInvoiceController) that is related to Proforma Invoice LWC. 
This field is updated based on the selection of either Percentage or Amount in Proforma Invoice SubType Field</description>
    <inlineHelpText>Input Value (For Internal Use i.e Y1)</inlineHelpText>
    <label>Input Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>