force-app/main/default/objects/Opportunity/fields/Installment_due_amount_CalculatedValue__c.field-meta.xml
<CustomField>
    <fullName>Installment_due_amount_CalculatedValue__c</fullName>
    <formula>IF( ISPICKVAL(Proforma_Invoice_Type__c , &apos;DLD Amount&apos;),(4/100)* Unit__r.Puchase_Price__c , IF(ISPICKVAL(Proforma_Invoice_Type__c , &apos;Unit Price&apos;) &amp;&amp;  ISPICKVAL( Proforma_Invoice_Sub_Type__c , &apos;Percentage&apos;) , Calculated_Value__c,  IF(ISPICKVAL(Proforma_Invoice_Type__c , &apos;Unit Price&apos;) &amp;&amp;  ISPICKVAL( Proforma_Invoice_Sub_Type__c , &apos;Amount&apos;), Input_Value__c, null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Calculated Value based on your selection on Unit Price/DLD Amount</inlineHelpText>
    <label>Installment due amount (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>