force-app/main/default/objects/Opportunity/fields/Interior_Internal_Amenities_of_the_Unt__c.field-meta.xml
<CustomField>
    <fullName>Interior_Internal_Amenities_of_the_Unt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interior &amp; Internal Amenities of the Unt</label>
    <type>Checkbox</type>
</CustomField>