force-app/main/default/objects/Opportunity/fields/Is_Book_Site_Visit_from_Website__c.field-meta.xml
<CustomField>
    <fullName>Is_Book_Site_Visit_from_Website__c</fullName>
    <formula>IF(
OR( 
ISBLANK(HH__c),  
ISBLANK(MM__c),  
ISBLANK(TEXT(Interested_In__c)),  
ISBLANK(TEXT(Date_Of_Visit__c)) ), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Book Site Visit from Website</label>
    <type>Checkbox</type>
</CustomField>